[gd_scene load_steps=2 format=3 uid="uid://cqqrt8dbr6jit"]

[ext_resource type="Script" uid="uid://ut3v8jclhyae" path="res://scripts/stat_line.gd" id="1_ujthy"]

[node name="StatLine" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ujthy")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 23)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="StatName" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Stat Name:"
fit_content = true

[node name="StatProfile" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "2/5
"
fit_content = true
horizontal_alignment = 2
